Enterprise Search Engines PUT API (#93975)
* First version, hooking up REST action

* Fix request serialization / deserialization

* Add BigArrays instance

* Fix authorization for new client

* PR Feedback

* More PR feedback

* Add index validation and alias updating

* Fix ENT_SEARCH_ORIGIN value

* Create indices for test

* Fix tests, check aliases

* Always re-add aliases on update

* Added engine action to constants

* Changed Request to implement IndicesRequest

* Add REST status to response, implement IndicesRequest.Replaceable in Request, StatusToXContentObject in Response

* Delegate validation on update alias, and transform into Illegal arg exception

* PR feedback

* First test version

* Add update and bad request tests

* Added serialization tests

* Fix URL validation for JSON REST API

* Change naming in REST tests

* Add TODO messages